vNEXT (in development)

v1.0.1

 * Fixed issue with very long packets not fitting in buffers
   after TLS decryption.
 * Improved error message when IrcClient.connect() is called
   while already connected
 * Made IrcClient.disconnect() block until the disconnect has
   been processed. This will be a very short period of time,
   and allows callers to immediately call connect() again
   afterwards if they wish
 * Fixed various issues with disconnecting TLS connections
   not behaving correctly

v1.0.0

 * Replaced Ktor dependency with custom socket handling, which fixes
   fatal issue when connecting to servers over TLS that request a
   client certificate.
 * Added NicknameChangeRequired event for the case when a nickname is
   not allowed during connection and *MUST* be changed
 * BREAKING: Added 'PreferIPv6' behaviour config, defaulting to true.
   With this configuration KtIrc will try to use IPv6 if the server
   publishes AAAA records.
 * BREAKING: Default port is now 6697, TLS is enabled by default

v0.11.0

 * Added SourcedEvent interface for events that have a user source attached
 * Added ChannelJoinFailed event
 * Added ChannelMembershipAdjustment interface for events that concern
   users joining/leaving channels
 * Added missing user parameter to ModeChangedEvent

v0.10.3

 * Fix issue parsing CTCPs when the content contained multi-byte chars
 * Fixed multiple issues when receiving malformed input from the server:
   * Invalid server-time tags are now ignored and the current time used
   * PRIVMSGs, NOTICEs and TOPICs with no target/message are now ignored
   * CAPs with invalid or missing arguments are now ignored
   * Better handling for duplicate JOIN messages
   * Ignored messages are now logged more consistently

v0.10.2

 * Fix handling of multiple long lines sometimes dropping part of the line
 * Support lines with 8191 bytes of tags, as allowed by the message-tags spec
 * Fix a few more instances of occasional ConcurrentModificationExceptions
