@@ -7,36 +7,17 @@ import kotlinx.coroutines.io.ByteWriteChannel
 import kotlinx.coroutines.io.close
 import kotlinx.coroutines.launch
 import kotlinx.coroutines.suspendCancellableCoroutine
-import kotlinx.io.pool.DefaultPool
+import kotlinx.io.pool.useInstance
 import java.net.SocketAddress
 import java.nio.ByteBuffer
 import java.nio.channels.*
 import kotlin.coroutines.resume
 import kotlin.coroutines.resumeWithException
 
-internal const val BUFFER_SIZE = 32768
-internal const val POOL_SIZE = 128
-
-internal val defaultPool = ByteBufferPool()
-
-internal class ByteBufferPool : DefaultPool<ByteBuffer>(POOL_SIZE) {
-    override fun produceInstance(): ByteBuffer = ByteBuffer.allocate(BUFFER_SIZE)
-    override fun clearInstance(instance: ByteBuffer): ByteBuffer = instance.apply { clear() }
-
-    inline fun <T> borrow(block: (ByteBuffer) -> T): T {
-        val buffer = borrow()
-        try {
-            return block(buffer)
-        } finally {
-            recycle(buffer)
-        }
-    }
-}
-
 internal interface Socket {
     fun bind(socketAddress: SocketAddress)
     suspend fun connect(socketAddress: SocketAddress)
-    suspend fun read(buffer: ByteBuffer): Int
+    suspend fun read(): ByteBuffer?
     fun close()
     val write: ByteWriteChannel
     val isOpen: Boolean
@@ -73,9 +54,9 @@ internal class PlainTextSocket(private val scope: CoroutineScope) : Socket {
         client.close()
     }
 
-    override suspend fun read(buffer: ByteBuffer) = try {
+    override suspend fun read() = try {
+        val buffer = byteBufferPool.borrow()
         val bytes = suspendCancellableCoroutine<Int> { continuation ->
-
             client.closeOnCancel(continuation)
             client.read(buffer, continuation, asyncIOHandler())
         }
@@ -83,15 +64,17 @@ internal class PlainTextSocket(private val scope: CoroutineScope) : Socket {
         if (bytes == -1) {
             close()
         }
-        bytes
+
+        buffer.flip()
+        buffer
     } catch (_: ClosedChannelException) {
         // Ignore
-        0
+        null
     }
 
     private suspend fun writeLoop() {
         while (client.isOpen) {
-            defaultPool.borrow { buffer ->
+            byteBufferPool.useInstance { buffer ->
                 writeChannel.readAvailable(buffer)
                 buffer.flip()
                 try {
